[gd_scene load_steps=4 format=3 uid="uid://w6mllopse3wt"]

[ext_resource type="PackedScene" uid="uid://14cc171vx3nh" path="res://UI/individual_upgrade_panel.tscn" id="1_0s0gu"]
[ext_resource type="Script" path="res://UI/upgrade_screen_panel.gd" id="1_cnujf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qovy7"]
bg_color = Color(0, 0, 0, 0.0627451)

[node name="UpgradeScreenPanel" type="Panel" node_paths=PackedStringArray("upgrade_panels_holder")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qovy7")
script = ExtResource("1_cnujf")
upgrade_panels_holder = NodePath("HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -224.0
offset_right = 476.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="IndividualUpgradePanel" parent="HBoxContainer" instance=ExtResource("1_0s0gu")]
layout_mode = 2

[node name="IndividualUpgradePanel2" parent="HBoxContainer" instance=ExtResource("1_0s0gu")]
layout_mode = 2

[node name="IndividualUpgradePanel3" parent="HBoxContainer" instance=ExtResource("1_0s0gu")]
layout_mode = 2
